# corewar

./: .gitignore  CMakeLists.txt  COREWAR_COOKBOOK.md  Makefile  README.md  author
Players/Compiled/: helltrain.cor
asm/: Makefile  addcheckfile.c  asm  asm.c  asm.h  batman.s  block5.c  bonus.c  checkfile.c  codecon.c  comname.c  convert.c  corcode.c  corcode2.c  corconval.c  cortos.c  dlc1.c  dlc2.c  dlc3.c  errman.c  labelch.c  op.c  op.h  res  usefull.c  valid.c
asm/gnl/: get_next_line.c  get_next_line.h
asm/gnl/libft/: Makefile  addition.c  author  convert.c  format.c  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_fact.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_n.c  ft_prime.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqr.c  (+49 more)
libft/: Makefile  author  colors.c  ed_memalloc.c  free_mem.c  ft_arrlst.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_capitalizer.c  ft_contdel.c  ft_donothing.c  ft_elemnewdeterm.c  ft_elemnewterm.c  ft_elemnuldeterm.c  ft_elemnulterm.c  ft_error.c  ft_findchr.c  ft_fittoint.c  ft_ftoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_ishex.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddafter.c  ft_lstaddend.c  ft_lstarr.c  ft_lstcat.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelcount.c  ft_lstdelone.c  ft_lstinter.c  ft_lstiter.c  ft_lstmap.c  (+63 more)
resources/: op.c
resources/vm_champs/champs/: Car.cor  Gagnant.cor
vm/: Makefile  virtual_machine.c  virtual_machine.h
vm/includes/: virtual_machine.h
vm/src/: check_code_type.c  checker.c  commands.c  commands_2.c  commands_3.c  commands_4.c  create_arena.c  cycle.c  dblst_tools.c  define.c  dump.c  error_management.c  get.c  get_arg.c  order.c  pars_args.c  reader.c  skip.c  virtual_machine.c
