cmake_minimum_required(VERSION 3.14)
project(work C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)
include_directories(resources)
include_directories(vm)

add_executable(work
        libft/ed_memalloc.c
        libft/ft_arrlst.c
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_capitalizer.c
        libft/ft_contdel.c
        libft/ft_donothing.c
        libft/ft_elemnewdeterm.c
        libft/ft_elemnewterm.c
        libft/ft_elemnuldeterm.c
        libft/ft_elemnulterm.c
        libft/ft_error.c
        libft/ft_findchr.c
        libft/ft_fittoint.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_ishex.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstaddafter.c
        libft/ft_lstaddend.c
        libft/ft_lstarr.c
        libft/ft_lstcat.c
        libft/ft_lstcount.c
        libft/ft_lstdel.c
        libft/ft_lstdelcount.c
        libft/ft_lstdelone.c
        libft/ft_lstinter.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstmaxsize.c
        libft/ft_lstnew.c
        libft/ft_lstprint.c
        libft/ft_lstpushend.c
        libft/ft_lstrvr.c
        libft/ft_lstsave.c
        libft/ft_lstsize.c
        libft/ft_lstskip.c
        libft/ft_lstterm.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_onlyatoistr.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_qfree.c
        libft/ft_split.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        resources/op.h
        resources/op.c
        vm/src/virtual_machine.c
        vm/virtual_machine.h
        vm/src/dblst_tools.c
        vm/src/reader.c
        vm/src/cycle.c
        vm/src/create_arena.c
        vm/src/error_management.c vm/src/commands.c vm/src/checker.c vm/src/dump.c)
